--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,12 @@ services:
       - "8000:8000"
     env_file: ./backend/.env
     depends_on:
-      postgres:
+      timescaledb:
         condition: service_healthy
     restart: unless-stopped
 
-  postgres:
-    image: postgres:16
+  timescaledb:
+    image: timescale/timescaledb:latest-pg16
     environment:
       POSTGRES_USER: stock
       POSTGRES_PASSWORD: stock
@@ -19,6 +19,7 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+      - ./db/migrations:/docker-entrypoint-initdb.d:ro
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U stock -d stock_tracker"]
       interval: 5s
