feat: add final polish — error boundaries, skeletons, responsive, Docker, config
- Add ErrorBoundary class component wrapping all dashboard routes
- Add page-specific loading skeletons (foreign flow, volume, signals)
- Make sidebar responsive with hamburger menu on mobile
- Add horizontal scroll for tables, mobile-friendly tap targets
- Add CORS_ORIGINS and LOG_LEVEL to backend config
- Add VITE_API_BASE_URL env support in frontend
- Add Redis service, health checks, and resource limits to Docker Compose
- Rewrite README with features, setup, env vars, API reference
- Add .env.production templates for backend and frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,27 @@ services:
     ports:
       - "8000:8000"
     env_file: ./backend/.env
+    environment:
+      - DATABASE_URL=postgresql://stock:stock@timescaledb:5432/stock_tracker
+      - CORS_ORIGINS=http://localhost
     depends_on:
       timescaledb:
         condition: service_healthy
+      redis:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 15s
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+    networks:
+      - app-network
 
   timescaledb:
     image: timescale/timescaledb:latest-pg16
@@ -25,13 +42,52 @@ services:
       interval: 5s
       timeout: 3s
       retries: 5
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+    networks:
+      - app-network
+
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 128M
+    networks:
+      - app-network
 
   frontend:
     build: ./frontend
     ports:
       - "80:80"
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 128M
+    networks:
+      - app-network
 
 volumes:
   pgdata:
+  redis-data:
+
+networks:
+  app-network:
+    driver: bridge
