--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,7 @@
 SSI_CONSUMER_ID=your_consumer_id
 SSI_CONSUMER_SECRET=your_consumer_secret
 DATABASE_URL=postgresql://stock:stock@localhost:5432/stock_tracker
+CORS_ORIGINS=http://localhost:5173
+LOG_LEVEL=DEBUG
 CHANNEL_R_INTERVAL_MS=1000
 FUTURES_OVERRIDE=
