feat(websocket): add multi-channel router with auth and rate limiting
Replace single-channel broadcast endpoint with structured multi-channel router supporting index, top-movers, and derivatives channels with per-client subscriptions, JWT authentication, and configurable rate limiting.

Changes:
- Add backend/app/websocket/router.py — multi-channel WS router with auth + rate limiting
- Update backend/app/config.py — add WS_RATE_LIMIT_MESSAGES, WS_RATE_LIMIT_WINDOW
- Update backend/app/websocket/broadcast_loop.py — feed 3 channel-specific managers
- Update backend/app/main.py — register 3 manager singletons, mount router
- Update backend/tests/test_websocket_endpoint.py — rewrite for multi-channel API
- Update backend/.env.example — document new WS settings
- Remove backend/app/websocket/endpoint.py — replaced by router.py
- Add plans/260209-0918-websocket-multi-channel-router/ — implementation plan
- Add plans/reports/planner-260209-0922-websocket-multi-channel-router.md
- Add plans/reports/code-reviewer-260209-0918-websocket-multi-channel-router.md

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,8 @@ CORS_ORIGINS=http://localhost:5173
 LOG_LEVEL=DEBUG
 CHANNEL_R_INTERVAL_MS=1000
 FUTURES_OVERRIDE=
+
+# WebSocket authentication (leave empty to disable auth)
+WS_AUTH_TOKEN=
+# Max WebSocket connections per IP
+WS_MAX_CONNECTIONS_PER_IP=5
