feat(price-tracker): add real-time alert generator with 4 signal types
Implement PriceTracker class with support for VOLUME_SPIKE, PRICE_BREAKOUT,
FOREIGN_ACCELERATION, and BASIS_DIVERGENCE signal detection. Integrates with
market data processor and main app lifecycle. Includes 31 comprehensive unit tests.

--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,14 @@ frontend/dist/
 .DS_Store
 Thumbs.db
 
+# Memory system (session state — personal, not committed)
+SESSION.md
+WORKLOG.md
+.claude/identity/
+.claude/memory/
+.claude/hooks/
+.claude/commands/
+.claude/settings.json
+
 # Docker
 *.log
