feat(db): add PostgreSQL persistence layer with Alembic migrations and graceful startup
- Rename connection.py to pool.py with configurable pool sizes (DB_POOL_MIN/DB_POOL_MAX) and health check
- Add Alembic migration framework with initial migration creating 5 TimescaleDB hypertables
- Add TimescaleDB service to docker-compose.prod.yml with health checks and env var credentials
- Implement graceful startup: app works without DB, history endpoints return 503 when unavailable
- Health endpoint now reports database status (connected/unavailable)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,9 @@
 SSI_CONSUMER_ID=your_consumer_id
 SSI_CONSUMER_SECRET=your_consumer_secret
 DATABASE_URL=postgresql://stock:stock@localhost:5432/stock_tracker
+# Database pool (app starts without DB if connection fails)
+DB_POOL_MIN=2
+DB_POOL_MAX=10
 CORS_ORIGINS=http://localhost:5173
 LOG_LEVEL=DEBUG
 CHANNEL_R_INTERVAL_MS=1000
