--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,8 +71,6 @@ services:
 
   frontend:
     build: ./frontend
-    ports:
-      - "80:80"
     depends_on:
       backend:
         condition: service_healthy
@@ -81,6 +79,23 @@ services:
       resources:
         limits:
           memory: 128M
+    networks:
+      - app-network
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - frontend
+      - backend
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 64M
     networks:
       - app-network
 
